# algorithms_and_DS

./: CMakeLists.txt  README.md  main.c
data_structure/: queue.c  queue.h  sequential_linear_list.c  sequential_linear_list.h  singly_linked_list.c  singly_linked_list.h  stack.c  stack.h  table.c  table.h  tree.c  tree.h
lab1/: lab1.c  lab1.h
lab2/: lab2.c  lab2.h
lab3/: lab3.c  lab3.h
lab4/searches_for_tcf/: searches_for_tcf.c  searches_for_tcf.h
lab4/test_searches/: test_searches.c  test_searches.h
lab4/time_complexity_function_for_searches/: time_complexity_function_for_searches.c  time_complexity_function_for_searches.h
lab5/: lab5.c  lab5.h
lab6/: lab6.c  lab6.h
lab7/: lab7.c  lab7.h
lab8/: lab8.c  lab8.h
searches/: searches.c  searches.h
searches_for_tcf/: searches_for_tcf.c  searches_for_tcf.h
sorts/: sorts.c  sorts.h
standart_functions/: standart_functions.c  standart_functions.h
str/: str.c  str.h
