cmake_minimum_required(VERSION 3.25)
project(algoritms_and_DS C)

set(CMAKE_C_STANDARD 11)

add_executable(algoritms_and_DS main.c lab1/lab1.c lab1/lab1.h lab2/lab2.c lab2/lab2.h str/str.c str/str.h lab3/lab3.c lab3/lab3.h sorts/sorts.c sorts/sorts.h standart_functions/standart_functions.c standart_functions/standart_functions.h)
