cmake_minimum_required(VERSION 3.25)
project(algoritms_and_DS C)

set(CMAKE_C_STANDARD 11)

add_executable(algoritms_and_DS main.c lab1/lab1.c lab1/lab1.h lab2/lab2.c lab2/lab2.h str/str.c str/str.h lab3/lab3.c lab3/lab3.h sorts/sorts.c sorts/sorts.h standart_functions/standart_functions.c standart_functions/standart_functions.h searches/searches.c searches/searches.h lab4/searches_for_tcf/searches_for_tcf.c lab4/searches_for_tcf/searches_for_tcf.h lab4/time_complexity_function_for_searches/time_complexity_function_for_searches.c lab4/time_complexity_function_for_searches/time_complexity_function_for_searches.h lab4/test_searches/test_searches.c lab4/test_searches/test_searches.h data_structure/sequential_linear_list.c data_structure/sequential_linear_list.h lab5/lab5.c lab5/lab5.h)
